# f2py-examples

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  README.rst  badcomment.f  badcomment_implicit.f  badprec.f90  f2py_demo.py  floatPrecision.f90  floatPrecision.py  fortprod.f90  goodcomment.f  goodcomment.f90  meson.build  prod.f90  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
tests/: prog_fortprod.f90  test.py  test_all.py
