[metadata]
name = demof2py
version = 0.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = demo Python wrap of Fortran
url = https://github.com/scivision/f2pyExamples
keywords =
  fortran
  f2py
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 2.7
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
install_requires =
  numpy >= 1.16

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
