[metadata]
name = demof2py
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = demo Python wrap of Fortran
url = https://github.com/scivision/f2pyExamples
keywords =
  fortran
  f2py
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
packages = find:
install_requires =
  numpy >= 1.16

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
